--- a/src/app/elite/elite-business-card/elite-business-card.component.html
+++ b/src/app/elite/elite-business-card/elite-business-card.component.html
@@ -1,10 +1,4 @@
-<div *ngIf="!isSettingsOn" class="settings-box" style="z-index: 999;height: 100vh;
-width: 100vh;
-background: #db000026;">
-    Settings
-    Settings
 
-</div>
 <div *ngIf="!isSettingsOn" [ngClass]="theme[themeIndex].themeName" class="mainContainer disable-dbl-tap-zoom">
 
 
@@ -63,7 +57,7 @@ background: #db000026;">
         border-radius: 10px;
         text-align: center;">
 
-        <div
+        <!-- <div
             style="height: 100px; width: 100px;border: hotpink 1px solid;background-color: indigo;z-index: 9999999999;">
 
             <div >
@@ -71,7 +65,7 @@ background: #db000026;">
                 <img style="width: 360px;" src="./assets/img/elite/Promoters/darkBlueW.png">
             </div>
 
-        </div>
+        </div> -->
     </div>
 
 
