--- a/src/app/elite/elite-business-card/elite-business-card.component.scss
+++ b/src/app/elite/elite-business-card/elite-business-card.component.scss
@@ -43,8 +43,8 @@
         max-width: 500px;
         justify-content: space-between;
         align-items: center;
-        border: black solid 5px;
-        background-color: rgb(0 0 0 / 88%);
+        // border: black solid 5px;
+        // background-color: rgb(0 0 0 / 88%);
         border-radius: 10px;
         overflow: hidden;
 
@@ -66,13 +66,13 @@
     }
 }
 
-.settings-box {
-    z-index: 999999999;
-    color: ivory;
-    height: 100vh;
-    width: 100vh;
-    background: red;
-}
+// .settings-box {
+//     z-index: 999999999;
+//     color: ivory;
+//     height: 100vh;
+//     width: 100vh;
+//     background: red;
+// }
 
 // TEHMES ⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️
 
