new sample report generated

--- a/src/app/bmx/bmx-creator/bmx-creator.component.scss
+++ b/src/app/bmx/bmx-creator/bmx-creator.component.scss
@@ -30,6 +30,12 @@
     }
 }
 
+@media print {
+    .no-print,
+    .no-print * {
+        display: none !important;
+    }
+}
 //   BRAND MATRIX CREATOR DASH
 
 .main-container {
