report generator in progress

--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
@@ -133,6 +133,7 @@
     <div [style.display]="(popUpQRCode)?'flex':'none'" class="qr-code">
         <div style="position: absolute;top:71px" #canvas></div>
         <img style="width: 360px;" src="./assets/img/bmx/qr/darkBlueW.png">
+        <p>{{myAngularxQrCode}}</p>
     </div>
 
 
